scss/partials/_ziggeo.scss
div.ziggeo-player {
  position: relative;
  border-radius: 8px;

  div.ziggeo-player-embed {
    border-radius: 8px;
    &>div {
      border-radius: 8px;
    }
  }

  div.ziggeo-player-not-processed {
    background-image: cdnUrl("/img/ML/video_loading.svg");
    background-size: 100%;
    background-color: #ECECEC;
    background-repeat: no-repeat;
    background-position: center;
    border-radius: 8px;
  }

  button.remove-video-bt {
    width: 24px;
    height: 24px;
    background-image: cdnUrl("/img/ML/remove_video_x.svg");
    background-size: 12px;
    background-position: center;
    background-repeat: no-repeat;
    position: absolute;
    top: 12px;
    left: 12px;
    z-index: 1;
  }
}

div.ziggeo-recorder {
  position: relative;
  border-radius: 8px;

  div.ziggeo-recorder-embed {
    border-radius: 8px;
    &>div {
      border-radius: 8px;
    }
  }

 button.remove-recorder-bt {
    width: 24px;
    height: 24px;
    background-image: cdnUrl("/img/ML/remove_video_x.svg");
    background-size: 12px;
    background-position: center;
    background-repeat: no-repeat;
    position: absolute;
    top: 12px;
    left: 12px;
    z-index: 1;
  } 

}

