Fix notifications not showing up after saving post with uploading video.

--- a/scss/partials/_ziggeo.scss
+++ b/scss/partials/_ziggeo.scss
@@ -12,7 +12,7 @@ div.ziggeo-player {
   div.ziggeo-player-not-processed {
     background-image: cdnUrl("/img/ML/video_loading.svg");
     background-size: 100%;
-    background-color: #ECECEC;
+    background-color: $deep_navy;
     background-repeat: no-repeat;
     background-position: center;
     border-radius: 8px;
